works with jwt for user

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       #- "traefik.http.middlewares.cors.headers.accesscontrolallowmethods=GET,POST,PUT,DELETE,OPTIONS"
       #- "traefik.http.middlewares.cors.headers.accesscontrolallowheaders=Content-Type,Authorization"
       #- "traefik.http.routers.backend-person.middlewares=cors@docker"
-      #- "traefik.http.routers.backend-person.entrypoints=web"
+      - "traefik.http.routers.backend-person.entrypoints=web"
 
   monitoring:
     build:
